--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,6 +4,10 @@
    
 {% block main %}
 <main id="mainIndex">
+    <div>
+        <h1>Bienvenue sur Kids Learning</h1>
+        <a href="">Découvrir</a>
+    </div>
     <p>Aujourd'hui on est le {{ "now"|date("d/m/Y") }}</p>
     <h2>Témoignages</h2>
     <p>Découvrez ce que les gens disent de notre plateforme</p>
