--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,7 +53,14 @@ header nav ul li a {
 header nav ul li a:hover {
   color: #e84e3c;
 }
-header div {
+header .active {
+  color: #e84e3c;
+}
+
+#mainIndex {
+  background-color: #f2f4f7;
+}
+#mainIndex div {
   background-image: url(./../../images/banner.jpeg);
   background-position: center;
   background-repeat: no-repeat;
@@ -61,7 +68,7 @@ header div {
   height: 70vh;
   position: relative;
 }
-header div h1 {
+#mainIndex div h1 {
   text-align: center;
   font-size: 100px;
   color: #2b3d4f;
@@ -71,7 +78,7 @@ header div h1 {
   transform: translateX(-50%);
   text-shadow: 4px 4px 2px white;
 }
-header div a {
+#mainIndex div a {
   position: absolute;
   background-color: #e84e3c;
   padding: 24px 32px;
@@ -85,13 +92,9 @@ header div a {
   border: solid 2px #e84e3c;
   transition: 0.2s;
 }
-header div a:hover {
+#mainIndex div a:hover {
   color: #e84e3c;
   background-color: #ffffff;
-}
-
-#mainIndex {
-  background-color: #f2f4f7;
 }
 #mainIndex p {
   text-align: center;
@@ -151,6 +154,170 @@ header div a:hover {
 }
 #mainIndex section article p:nth-of-type(2) {
   text-align: end;
+}
+
+#mainCours h2 {
+  text-align: center;
+  padding-top: 64px;
+  color: #2b3d4f;
+  font-size: 46px;
+}
+#mainCours p:nth-of-type(1) {
+  text-align: center;
+  font-size: 24px;
+  padding-top: 16px;
+}
+#mainCours section {
+  padding-top: 64px;
+  margin-bottom: 64px;
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+}
+#mainCours section article {
+  padding: 16px;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0px -4px 6px 4px rgb(226, 226, 226);
+  width: 25vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 128px;
+  position: relative;
+}
+#mainCours section article img {
+  width: 100%;
+  height: 450px;
+  border-bottom: solid 2px #2b3d4f;
+}
+#mainCours section article h3 {
+  padding: 64px 0px 32px;
+  font-size: 22px;
+  font-weight: bold;
+}
+#mainCours section article p {
+  font-size: 20px;
+  text-align: center;
+  width: 85%;
+  padding-bottom: 32px;
+}
+#mainCours section article a {
+  position: absolute;
+  text-align: center;
+  background-color: #e84e3c;
+  padding: 24px 32px;
+  border-radius: 6px;
+  bottom: 16px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #ffffff;
+  font-size: 22px;
+  letter-spacing: 1px;
+  border: solid 2px #e84e3c;
+  transition: 0.2s;
+}
+#mainCours section article a:hover {
+  color: #e84e3c;
+  background-color: #ffffff;
+}
+
+#mainRessources h2 {
+  text-align: center;
+  padding-top: 64px;
+  color: #2b3d4f;
+  font-size: 46px;
+}
+#mainRessources p:nth-of-type(1) {
+  text-align: center;
+  font-size: 24px;
+  padding-top: 16px;
+}
+#mainRessources table {
+  border-bottom: solid 2px #2b3d4f;
+  font-size: 22px;
+  margin: 64px auto;
+}
+#mainRessources table thead {
+  color: #ffffff;
+  background-color: #2b3d4f;
+  font-weight: bold;
+}
+#mainRessources table thead tr td {
+  padding: 16px 32px;
+  letter-spacing: 1px;
+}
+#mainRessources table tbody tr td {
+  padding: 16px 32px;
+}
+#mainRessources table tbody tr:nth-of-type(2) {
+  background-color: white;
+  border-top: solid 2px grey;
+  border-bottom: solid 2px grey;
+}
+
+#mainContact h2 {
+  text-align: center;
+  padding-top: 64px;
+  color: #2b3d4f;
+  font-size: 46px;
+}
+#mainContact p:nth-of-type(1) {
+  text-align: center;
+  font-size: 24px;
+  padding-top: 16px;
+}
+#mainContact form {
+  padding: 32px;
+  box-shadow: 0px 0px 8px 4px rgb(213, 213, 213);
+  margin: 64px auto;
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  background-color: white;
+  position: relative;
+  padding-bottom: 128px;
+}
+#mainContact form input {
+  padding: 8px;
+  border-radius: 4px;
+  border: solid 1px grey;
+  font-size: 18px;
+}
+#mainContact form label {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 16px 0px 8px;
+}
+#mainContact form select {
+  padding: 8px;
+  border-radius: 4px;
+  border: solid 1px grey;
+  font-size: 18px;
+}
+#mainContact form textarea {
+  border-radius: 4px;
+  padding: 32px 8px;
+}
+#mainContact form button {
+  position: absolute;
+  background-color: #e84e3c;
+  padding: 16px 24px;
+  border-radius: 6px;
+  bottom: 16px;
+  left: 24%;
+  transform: translateX(-50%);
+  color: #ffffff;
+  font-size: 22px;
+  letter-spacing: 1px;
+  border: solid 2px #e84e3c;
+  transition: 0.2s;
+}
+#mainContact form button:hover {
+  color: #e84e3c;
+  cursor: pointer;
+  background-color: #ffffff;
 }
 
 footer {
